RR: refinements to the registration UI -- close box is now working.

--- a/trunk/virtual_lab/src/main/webapp/partials/registration-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/registration-modal.html
@@ -3,8 +3,7 @@
 	
 	<form id="registration-form " name="form" class="css-form" novalidate>
 		<div class="modal-header">
-			<button type="button" class="close" data-dismiss="modal"
-				aria-hidden="true">&times;</button>
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" ng-click="apply(false)">&times;</button>
 			<h3 id="registrationModalLabel">New User Registration</h3>
 		</div>
 		<div class="modal-body">
