--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/institutions/create.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/institutions/create.jspx
@@ -4,6 +4,7 @@
     <jsp:output omit-xml-declaration="yes"/>
     <form:create id="fc_au_net_huni_model_Institution" modelAttribute="institution" path="/console/institutions" render="${empty dependencies}" z="user-managed">
         <field:input field="name" id="c_au_net_huni_model_Institution_name" max="60" min="5" required="true" z="user-managed"/>
+        <field:input field="code" id="c_au_net_huni_model_Institution_code" required="true" z="nAmAQa0PMKvsckhECAyNR4amLYs="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_au_net_huni_model_Institution" render="${not empty dependencies}" z="YeCciM35wYBGX53gMWPJ9sDanIs="/>
 </div>
