--- a/trunk/virtual_lab/src/main/webapp/partials/registration-modal.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/registration-modal.html
@@ -63,6 +63,9 @@
 				</div>
 			</div>
 		</div>
+		<div>
+			{{failedRegistration}}
+		</div>
 		<div class="modal-footer">
 			<button class="btn" aria-hidden="true" ng-click="apply(false)">Cancel</button>
 			<button class="btn btn-primary" ng-click="apply(true)" ng-disabled="form.$invalid || isUnchanged(applicant)">Submit</button>
