--- a/trunk/virtual_lab/src/main/webapp/toolLibrary/saved_views/projects/create.jspx
+++ b/trunk/virtual_lab/src/main/webapp/toolLibrary/saved_views/projects/create.jspx
@@ -2,8 +2,8 @@
 <div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_au_net_huni_model_Project" modelAttribute="project" path="/projects" render="${empty dependencies}" z="P3VLvjTwURF8mqZ27qoDbgN5dMw=">
-        <field:textarea field="name" id="c_au_net_huni_model_Project_name" required="true" z="TQF+k07T+hOuWTgfesQ/P5kQM48="/>
+    <form:create id="fc_au_net_huni_model_Project" modelAttribute="project" path="/console/projects" render="${empty dependencies}" z="user-managed">
+        <field:input type="text" field="name" id="c_au_net_huni_model_Project_name" required="true" z="user-managed"/>
         <field:datetime dateTimePattern="${project_startdate_date_format}" field="startDate" id="c_au_net_huni_model_Project_startDate" required="true" z="dT8GuiHXkFdMnxMF1StggrEmpeM="/>
         <field:simple field="dataSources" id="c_au_net_huni_model_Project_dataSources" messageCode="entity_reference_not_managed" messageCodeAttribute="Data Source" z="+8h9XGRZzvixY0x5zvPfwxdTTYE="/>
     </form:create>
