--- a/trunk/virtual_lab/src/main/webapp/toolLibrary/saved_views/projects/list.jspx
+++ b/trunk/virtual_lab/src/main/webapp/toolLibrary/saved_views/projects/list.jspx
@@ -3,7 +3,7 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:list id="pl_au_net_huni_model_Project" items="${projects}" z="pecCOsSjxA4s0kZWba7YEe9blCA=">
-        <table:table data="${projects}" id="l_au_net_huni_model_Project" path="/projects" z="I5oRdIxy/IO0zp6QgeE/zwfZC58=">
+        <table:table data="${projects}" id="l_au_net_huni_model_Project" path="/console/projects" z="user-managed">
             <table:column id="c_au_net_huni_model_Project_name" property="name" z="DcK3xvth4+RjTsTglbqyJWb224k="/>
             <table:column calendar="true" dateTimePattern="${project_startdate_date_format}" id="c_au_net_huni_model_Project_startDate" property="startDate" z="gmQOWxvKG+V6BHScg7mjQQrB5W8="/>
         </table:table>
