--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
@@ -40,7 +40,7 @@
             <menu:item id="i_toolcatalogitem_new" messageCode="global_menu_new" url="/console/toolcatalogitems?form" z="user-managed"/>
             <menu:item id="i_toolcatalogitem_list" messageCode="global_menu_list" url="/console/toolcatalogitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
-<%--         <menu:category id="c_datasource" z="7SDGeX8HZy84nuffgI15GsW1QwA=">
+		<menu:category id="c_datasource" z="7SDGeX8HZy84nuffgI15GsW1QwA=">
             <menu:item id="i_datasource_new" messageCode="global_menu_new" url="/console/datasources?form" z="user-managed"/>
             <menu:item id="i_datasource_list" messageCode="global_menu_list" url="/console/datasources?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
@@ -48,5 +48,5 @@
             <menu:item id="i_project_new" messageCode="global_menu_new" url="/console/projects?form" z="user-managed"/>
             <menu:item id="i_project_list" messageCode="global_menu_list" url="/console/projects?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
- --%>    </menu:menu>
+	</menu:menu>
 </div>
