--- a/virtual_lab/src/main/webapp/partials/workspace.html
+++ b/virtual_lab/src/main/webapp/partials/workspace.html
@@ -16,10 +16,8 @@
 		</div>
 
 
-		<div class="well sidebar-nav right">
-			<div ng-controller="HistoryCtrl">
-				<span ng-include src="'partials/tool-history.html'"></span>
-			</div>
+		<div class="sidebar-nav right">
+			<span ng-include src="'partials/tool-history.html'"></span>
 		</div>
 
 		<div class="content fixed-fixed">
