--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
@@ -36,11 +36,11 @@
             <menu:item id="i_toolcategory_new" messageCode="global_menu_new" url="/console/toolcategorys?form" z="user-managed"/>
             <menu:item id="i_toolcategory_list" messageCode="global_menu_list" url="/console/toolcategorys?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
-        <menu:category id="c_toolcatalogitem" z="mbzuD/8fYG32vmcEYD6RiNezQuw=">
-            <menu:item id="i_toolcatalogitem_new" messageCode="global_menu_new" url="/console/toolcatalogitems?form" z="user-managed"/>
-            <menu:item id="i_toolcatalogitem_list" messageCode="global_menu_list" url="/console/toolcatalogitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
+        <menu:category id="c_toollibraryitem" z="mbzuD/8fYG32vmcEYD6RiNezQuw=">
+            <menu:item id="i_toollibraryitem_new" messageCode="global_menu_new" url="/console/toollibraryitems?form" z="user-managed"/>
+            <menu:item id="i_toollibraryitem_list" messageCode="global_menu_list" url="/console/toollibraryitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
-		<menu:category id="c_datasource" z="7SDGeX8HZy84nuffgI15GsW1QwA=">
+        <menu:category id="c_datasource" z="7SDGeX8HZy84nuffgI15GsW1QwA=">
             <menu:item id="i_datasource_new" messageCode="global_menu_new" url="/console/datasources?form" z="user-managed"/>
             <menu:item id="i_datasource_list" messageCode="global_menu_list" url="/console/datasources?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
@@ -48,5 +48,9 @@
             <menu:item id="i_project_new" messageCode="global_menu_new" url="/console/projects?form" z="user-managed"/>
             <menu:item id="i_project_list" messageCode="global_menu_list" url="/console/projects?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
-	</menu:menu>
+        <menu:category id="c_toollibraryitem" z="zuB3VCOg2if8so7VM6XNMjvAyx8=">
+            <menu:item id="i_toollibraryitem_new" messageCode="global_menu_new" url="/toollibraryitems?form" z="0oxTfTDHpJMx96yhcf+gdtvGCqw="/>
+            <menu:item id="i_toollibraryitem_list" messageCode="global_menu_list" url="/toollibraryitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="qJWyES8JwVuW5SJogGu94SQWEcw="/>
+        </menu:category>
+    </menu:menu>
 </div>
