--- a/virtual_lab/src/main/webapp/partials/feedback-modal.html
+++ b/virtual_lab/src/main/webapp/partials/feedback-modal.html
@@ -6,7 +6,8 @@
 			<button type="button" class="close" data-dismiss="modal"
 				aria-hidden="true">&times;</button>
 			<h3 id="feedbackModalLabel">Feedback</h3>
-			<div id="feedbackContext">Context: {{context()}}</div>
+			<div id="feedbackContext">Rate this page: <em>{{context()}}</em></div>
+			<div style="font-size: small;">Scale: 1 = very poor, 2 = poor, 3 = satisfactory, 4 = good, 5 = excellent.</div>
 		</div>
 			<div class="modal-body">
 				<div class="control-group">
