--- a/virtual_lab/src/main/webapp/partials/data-provider/detail.html
+++ b/virtual_lab/src/main/webapp/partials/data-provider/detail.html
@@ -207,4 +207,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="row-fluid">
+		<div ng-include="'partials/feedback-button.html'"></div>
+	</div>
 </div>
