--- a/trunk/virtual_lab/src/main/webapp/partials/tool-library.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/tool-library.html
@@ -1,3 +1,37 @@
+<style type="text/css">
+<!--    
+.tool-library-name
+{
+	font-size: 14px;
+	line-height: 1.25;
+	padding:1px;
+	margin: 0px;
+	text-align: left;
+	font-weight: bold;
+	vertical-align: top;
+}
+
+.tool-library-label
+{
+	font-size: 12px;
+	line-height: 1.25;
+	padding:1px;
+	margin: 0px;
+	text-align: right;
+	font-weight: bold;
+	vertical-align: top;
+}
+
+.tool-library-value
+{
+	font-size: 12px;
+	line-height: 1.25;
+	padding:1px;
+	margin: 0px;
+	vertical-align: top;	
+}
+ -->
+</style>
 <div class="container-fluid">
   <div class="row-fluid">
     <div class="span2">
@@ -15,14 +49,29 @@
       <!--Body content-->
 
       <ul class="tool-listing">
-        <li ng-repeat="tool in toolLibrary | filter:query | orderBy:orderProp" class="tool-listing-item">
+        <li ng-repeat="tool in toolLibrary | filter:query | orderBy:orderProp" class="thumbnail">
 	        <table>
 	        	<tr>
 	        		<td rowspan="2" class="tool-listing-thumb"><img ng-src="{{tool.imageUrl}}"></td>
-	        		<th style="text-align: left; ">{{tool.name}}<th>
-	        	</tr>
-	        	<tr>
-	        		<td style="text-align: left; "><p style="line-height: 1.5; height: 70px; overflow: auto;" >{{tool.description}}</p></td>
+	        		<td style="text-align: left; ">
+	        			<h4 class="tool-library-name">{{tool.name}}</h4>
+						<table>
+							<tbody>
+							<tr>
+								<th class="tool-library-label">Creation date:</th><td class="tool-library-value">{{tool.creationDate}}</td>
+								</tr>
+								<tr>
+								<th  class="tool-library-label">Software version:</th><td class="tool-library-value">{{tool.softwareVersion}}</td>
+								</tr>
+								<tr>
+								<th  class="tool-library-label">Author:</th><td class="tool-library-value">{{tool.author}}</td>
+								</tr>
+								<tr>
+								<th  class="tool-library-label">Description:</th><td class="tool-library-value">{{tool.description}}</td>
+								</tr>
+							</tbody>
+						</table>
+	        		<td>
 	        	</tr>
 	        </table>
         </li>
