--- a/trunk/virtual_lab/src/main/webapp/partials/tool-library.html
+++ b/trunk/virtual_lab/src/main/webapp/partials/tool-library.html
@@ -52,7 +52,7 @@
         <li ng-repeat="tool in toolLibrary | filter:query | orderBy:orderProp" class="thumbnail">
 	        <table>
 	        	<tr>
-	        		<td rowspan="2" class="tool-listing-thumb"><img ng-src="{{tool.imageUrl}}"></td>
+	        		<td rowspan="2" class="tool-listing-thumb"><img ng-src="{{tool.thumbnailUrl}}"></td>
 	        		<td style="text-align: left; ">
 	        			<h4 class="tool-library-name">{{tool.name}}</h4>
 						<table>
